--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -124,9 +124,9 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name":"明烟明火抓拍",
+    "name":"火焰",
     "start":1,
-    "source":12,
+    "source":11,
     "schedulerType":"Daemon",
     "models":{
         "id":1,
@@ -172,8 +172,8 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name": "明烟明火抓拍",
-    "url":"rtsp://admin:wyl1q2w3e@192.168.1.92"
+    "name": "闸机安全帽识别",
+    "url":"rtsp://admin:qwer2024@192.168.110.64:554/h264/ch1/main/av_stream"
 }'
 
 # 清除所有告警记录并删除文件
@@ -204,7 +204,7 @@ curl --location --request POST 'http://127.0.0.1:8000/api/device/deleteCloudPlat
 --header 'Host: 127.0.0.1:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "id":2
+    "id":1
 }'
 
 # 创建管理平台
