--- a/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
@@ -344,6 +344,115 @@
 }
 ```
 
+## gh-rk-1011
+
++ frp
+  + ssh -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1011:22,proxyport=5002' root@47.100.31.121
+
++ 任务列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": "al9OY",
+            "models": {
+                "duration": " ",
+                "end": " ",
+                "id": 3,
+                "name": "安全帽检测",
+                "start": " "
+            },
+            "name": "安全帽",
+            "running": 1,
+            "schedulerType": "Daemon",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 11,
+            "start": 1
+        },
+        {
+            "id": "LlJSg",
+            "models": {
+                "duration": " ",
+                "end": " ",
+                "id": 4,
+                "name": "反光衣检测",
+                "start": " "
+            },
+            "name": "背心",
+            "running": 1,
+            "schedulerType": "Daemon",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 11,
+            "start": 1
+        },
+        {
+            "id": "f844m",
+            "models": {
+                "duration": " ",
+                "end": " ",
+                "id": 1,
+                "name": "烟火检测",
+                "start": " "
+            },
+            "name": "火焰",
+            "running": 1,
+            "schedulerType": "Daemon",
+            "song_address": "",
+            "sound_platform": 9999,
+            "source": 11,
+            "start": 1
+        }
+    ],
+    "total_count": 0,
+    "total_page": 1
+}
+```
+
++ 相机列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "id": 11,
+            "name": "闸机安全帽识别",
+            "updatedtime": "2024-5-7 18:10:11",
+            "url": "rtsp://admin:qwer2024@192.168.110.64:554/h264/ch1/main/av_stream",
+            "url_suffix": "/live/70Uqd"
+        }
+    ],
+    "total_count": 0,
+    "total_page": 1
+}
+```
+
++ 管理平台列表
+```json
+{
+    "code": 0,
+    "curr_page": 1,
+    "list": [
+        {
+            "address": "https://wisdom.aotusoft.net/wisdom/aibox/upload",
+            "appKeyId": "abc",
+            "appKeySecret": "123",
+            "id": 2,
+            "name": "南京傲途",
+            "protocol": "nanjing_aotu",
+            "type": "event_push"
+        }
+    ],
+    "msg": "success",
+    "total_count": 1,
+    "total_page": 1
+}
+```
+
 ## gh-rk-1012
 
 + frp
