增加深度学习和机器学习相关笔记

--- a/Project/dynamic-face-recognize-动态人脸识别/1_1_项目简介.md
+++ b/Project/dynamic-face-recognize-动态人脸识别/1_1_项目简介.md
@@ -2,6 +2,18 @@
 
 + 动态人脸识别项目
 
+## 人脸识别项目的意义是什么
+
++ 通过这个项目，接触两个方向：模型部署和视频流开发方向
+
++ 模型部署方向
+  + 了解模型基础概念
+  + 了解模型部署流程
+
++ 视频流开发
+  + 了解视频流基础概念
+  + 了解视频流编解码
+
 ## 人脸识别是什么
 
 + 广义的人脸识别实际包括构建人脸识别系统的一些列相关技术，包括人脸图像采集，人脸定位，人脸识别预处理，身份确认以及身份查找等；而狭义的人脸识别特指通过人脸进行身份确认或者身份查找的技术和系统
