更新计算机视觉

--- a/C++/C++_06_编程技巧/C++_06_3_编程技巧.md
+++ b/C++/C++_06_编程技巧/C++_06_3_编程技巧.md
@@ -2,6 +2,32 @@
 
 + C++编程技巧
 
+## c++ 获取当前时间戳 毫秒
+
+在C++中获取当前时间戳（以毫秒为单位）通常需要使用操作系统提供的时间函数。以下是一个使用C++标准库的例子，可以获取当前时间戳（以毫秒为单位）：
+
+```cpp
+#include <iostream>
+#include <chrono>
+
+int main() {
+    // 获取当前时间点
+    auto now = std::chrono::system_clock::now();
+
+    // 将当前时间点转换为毫秒
+    auto ms = std::chrono::time_point_cast<std::chrono::milliseconds>(now);
+
+    // 获取时间戳
+    auto timestamp = ms.time_since_epoch().count();
+
+    std::cout << "Current timestamp in milliseconds: " << timestamp << std::endl;
+
+    return 0;
+}
+```
+
+这段代码使用了 `<chrono>` 头文件中的时间库，以及 `std::chrono::system_clock` 类和 `std::chrono::milliseconds` 类。它获取当前时间点，然后将其转换为毫秒，并输出时间戳。
+
 ## C++ std::this_thread::yield()函数后面的语句还会执行吗
 
 `std::this_thread::yield()` 函数是一个线程库提供的函数，用于提示调度器让出当前线程的执行权，以便其他线程有机会执行。调用 `std::this_thread::yield()` 后，当前线程会主动让出 CPU 的执行时间片，但它的执行权并不会立即转移到其他线程上。相反，操作系统调度器会在合适的时机（通常是在同一线程队列中的其他线程都执行完毕后）再次调度当前线程。因此，`std::this_thread::yield()` 后面的语句仍然会执行，只是在稍后的时间点。
