--- a/DeepLearning/1_3_目标检测.md
+++ b/DeepLearning/1_3_目标检测.md
@@ -12,6 +12,35 @@
 
 + 目标检测的前处理技术主要包括图像预处理、特征提取、数据增强等。图像预处理包括图像缩放、归一化、旋转、剪裁等操作，这能够对原始图像进行一定的优化和处理，提高模型的鲁棒性和准确率。特征提取是从原始图像中提取目标特征的过程，常用的提取特征的方式有卷积神经网络（CNN）、霍夫变换、边缘检测等方法。数据增强则是通过对原始图像进行变换，如随机裁剪、随机翻转、亮度调节、添加噪声等操作，增加训练数据量，提高模型的泛化能力。
 
+## 机器学习和深度学习中关于图像数据输入的 Shape
+
++ 在机器学习的图片输入数据中，只需要将图片数据的4维(图片的多少，图片的长，图片的宽，图片的通道数)转换为2维即可
+```python3
+train_data = train_data.reshape(train_data.shape[0], train_data.shape[1] * train_data.shape[2] * train_data.shape[3])
+```
+
++ 深度学习，读取图片阶段:
+```python3
+item_image = cv2.imread(img_path)
+item_image = cv2.resize(item_image, (224,224), interpolation=cv2.INTER_AREA)
+```
+  + cv2.imread()是为了读取图片上的数据，也就是原始图像数据的信息。
+  + 在cv2.resize()中，可以指定输出图片的大小，也就是图片的长和宽。
++ 把读取到数据转换成ndarray
+```python3
+train_data = np.array(train_data, dtype='float32')
+```
++ 此时，如果打印train_data的维度，会显示一个4个维度的数据，(图片的数量，图片的长，图片的宽，图片的通道数)
+
++ shape
+  + 图像形状，行数，列数，通道数
+
++ size
+  + 图像大小，行数 * 列数 * 通道数
+
++ dtype
+  + 图像数据类型，通常为uint8
+
 ## 目标检测的后处理
 
 + 目标检测的后处理技术主要是指对目标检测算法的输出进行调整和优化，以提高检测结果的准确性和稳定性。
