更新C++基础知识笔记

--- a/DeepLearning/1_3_目标检测.md
+++ b/DeepLearning/1_3_目标检测.md
@@ -12,6 +12,8 @@
 
 + 目标检测的前处理技术主要包括图像预处理、特征提取、数据增强等。图像预处理包括图像缩放、归一化、旋转、剪裁等操作，这能够对原始图像进行一定的优化和处理，提高模型的鲁棒性和准确率。特征提取是从原始图像中提取目标特征的过程，常用的提取特征的方式有卷积神经网络（CNN）、霍夫变换、边缘检测等方法。数据增强则是通过对原始图像进行变换，如随机裁剪、随机翻转、亮度调节、添加噪声等操作，增加训练数据量，提高模型的泛化能力。
 
++ 通过OpenCV读取图片，对图片进行缩放
+
 ## 机器学习和深度学习中关于图像数据输入的 Shape
 
 + 在机器学习的图片输入数据中，只需要将图片数据的4维(图片的多少，图片的长，图片的宽，图片的通道数)转换为2维即可
