--- a/Redis/1_基础知识/1_1_基础.md
+++ b/Redis/1_基础知识/1_1_基础.md
@@ -6,6 +6,30 @@
 
 Redis是一个开源的内存数据库，它可以用作键值存储、缓存和消息队列。Redis支持各种数据结构，如字符串、哈希、列表、集合、有序集合等，这使得它非常灵活和多用途。它通常被用来加速应用程序的性能，存储会频繁访问的数据，或者作为分布式系统中的数据存储和消息传递中间件。Redis的速度非常快，因为它将数据存储在内存中，并且可以通过持久化机制将数据保存到磁盘上以进行持久化存储。
 
+## Redis(维基百科)
+
++ Redis(Remote Dictionary Server)是一个使用ANSI C编写的支持网络，基于内存，分布式，可选持久性的键值对存储数据库。
+
++ 数据模型
+  + Redis的外围由一个键，值映射的字典构成。与其他非关系型数据库主要不同在于： Redis中值的类型不仅限于字符串，还支持如下抽象数据类型
+    + 字符串列表
+    + 无序不重复的字符串集合
+    + 有序不重复的字符串集合
+    + 键，值都为字符串的哈希表
+  + 值的类型决定了值本身支持的操作。Redis支持不同无序，有序的列表，无序，有序的集合间的交集，并集等高级服务器端原子操作
+
++ 持久化
+  + Redis通常将全部数据存储在内存中
+  + 目前通过两种方式实现持久化
+    + 使用快照，一种半持久耐用模式。不时的将数据集以异步方式从内存以RDB格式写入硬盘
+    + 1.1版本开始使用更安全的AOF格式替代，一种只能追加的日志类型。将数据集修改操作记录起来。Redis能够在后台对只可追加的记录进行修改，从而避免日志的无限增长。
+
++ 同步
+  + Redis支持主从同步。数据可以从主服务器向任意数量的从服务器上同步，从服务器可以是关联其他从服务器的主服务器。这使得Redis可执行单层树复制。从盘可以有意无意的对数据进行写操作。由于完全实现了发布/订阅机制，使得从数据库在任何地方同步树时，可订阅一个频道并接收主服务器完整的消息发布记录。同步对读取操作的可扩展性和数据冗余很有帮助
+
++ 性能
+  + 当数据依赖不再需要，Redis这种基于内存的性质，与在执行一个事务时将每个变化都写入硬盘的数据库系统相比就显得执行效率非常高。[11]写与读操作速度没有明显差别。
+
 ## 数据库 redis 详解
 
 Redis是一个非常流行的开源内存数据库，它提供了丰富的功能和灵活的用途。下面是对Redis的一些详细解释：
