--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2405,9 +2405,16 @@ mount /dev/mmcblk0p10
   + 技能储备
     + 搭建个人博客
 
-+ 05.21
++ 05.22
   + vcr-机场行李箱抓取项目 
     + 前后端联调 [doing]
     + 标定算法接口 [done]
   + 技能储备
-    + 搭建个人博客
+    + 搭建个人博客 [done]
+  
++ 05.23
+  + vcr-机场行李箱抓取项目 
+    + 前后端联调 [doing]
+    + rk工地小盒子6-8路任务测试 [doing]
+  + 技能储备
+    + 个人博客增加分类功能
