--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2417,4 +2417,11 @@ mount /dev/mmcblk0p10
     + 前后端联调 [doing]
     + rk工地小盒子6-8路任务测试 [doing]
   + 技能储备
-    + 个人博客增加分类功能
+    + 个人博客增加分类功能 [done]
+
++ 05.24
+  + vcr-机场行李箱抓取项目 
+    + 前后端联调 [doing]
+    + rk工地小盒子6-8路任务测试 [doing]
+  + 技能储备
+    + 优化个人博客主页
