--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "工作周记"
 date:   2022-06-09 09:00:00 +0800
-categories: 个人规划
+categories: Personal
 ---
 ## 简介
 
@@ -2425,3 +2425,11 @@ mount /dev/mmcblk0p10
     + rk工地小盒子6-8路任务测试 [doing]
   + 技能储备
     + 优化个人博客主页
+
+## 2024.05.27 - 2024.06.02
+
++ 05.27
+  + vcr-机场行李箱抓取项目 
+    + 优化接口
+  + 技能储备
+    + 输出建立
