--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2431,8 +2431,15 @@ mount /dev/mmcblk0p10
 + 05.27
   + vcr-机场行李箱抓取项目 
     + 放置算法接口
-    + 角点图片接口
+    + 角点图片接口 [done]
   + rk
     + 制作新版本docker镜像 [done]
   + 技能储备
-    + 输出简历
+    + 整理机器人项目
+
++ 05.28
+  + vcr-机场行李箱抓取项目 
+    + 放置算法接口
+  + 技能储备
+    + 整理rk项目 [done]
+    + 个人博客首页显示指定文章
