--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2443,3 +2443,9 @@ mount /dev/mmcblk0p10
   + 技能储备
     + 整理rk项目 [done]
     + 个人博客首页显示指定文章
+
++ 05.29
+  + vcr-机场行李箱抓取项目 
+    + 放置算法接口,任务状态增加放置点参数 [done]
+  + 技能储备
+    + 个人博客首页显示指定文章
