--- a/Linux/linux_3_常用技巧/2024-05-22-linux_3_02_常用技巧.md
+++ b/Linux/linux_3_常用技巧/2024-05-22-linux_3_02_常用技巧.md
@@ -8,6 +8,122 @@ title: linux_3_02_常用技巧
 
 + linux系统下常用技巧
 
+## apt search
+
++ apt search命令在包的名称和描述中查找提供的字符串
+  + apt search package_name
++ apt show命令提供有关软件包的详细信息
+  + apt show package_name
+
++ apt包管理器在本地数据库/缓存中工作,其中包含来自各个存储库的可用包.该数据库包含有关可用包版本,依赖项等信息.他不包含整个包本身.这些软件包是从远程存储库下载的.
++ 当运行sudo apt update命令时,会在 /var/lib/apt/list目录中创建/更新此缓存.apt search和apt show命令利用此缓存
++ 术语包用于应用程序,程序,软件
+
++ 当搜索 apt search gambas时,将提供名称或者描述中包含 gambas 的大量软件包列表.此输出列表按照字母顺序排序
++ 为什么会有很多与gambas相关的软件包?
+  + 因为许多gambas软件包可能是依赖项,如果安装gambas3软件包,他们会自动安装.
+  + 如果使用apt show gambas3命令,他将显示与gambas3软件包一起安装的所有依赖项
+
++ 默认情况下,apt search命令会在包名称及其描述中查找搜索项
++ 可以通过指示apt命令仅搜索包名称来缩小搜索范围
+  + apt search --names-only search_term
+
+## apt show
+
++ apt show命令适用于确切的包名称,他提供有关包的更多信息:
+  + 版本信息
+  + 存储库信息
+  + 包信息的来源和维护者
+  + 在那里提交错误
+  + 下载以及安装大小
+  + 依赖关系
+  + 包的详细说明
+  + 等等
+
+## ubuntu apt 升级指定软件包
+
+在Ubuntu上使用`apt`来升级指定的软件包的步骤如下：
+
+### 步骤计划
+
+1. **更新软件包列表**：刷新可用软件包及其版本的列表。
+2. **升级指定软件包**：使用`apt install`命令和`--only-upgrade`标志。
+3. **验证升级**：检查软件包的版本以确保其已升级。
+
+### 详细步骤
+
+1. **更新软件包列表**：
+
+    确保你有关于可用软件包的最新信息：
+    ```sh
+    sudo apt update
+    ```
+
+2. **升级指定软件包**：
+
+    使用`apt install`命令和`--only-upgrade`标志来升级指定的软件包。将`package_name`替换为你要升级的软件包名称：
+    ```sh
+    sudo apt install --only-upgrade package_name
+    ```
+
+3. **验证升级**：
+
+    检查软件包的版本以确认其已升级。验证方法取决于软件包。对于大多数软件包，你可以使用以下命令：
+    ```sh
+    package_name --version
+    ```
+
+### 示例
+
+例如，要升级`curl`软件包，你可以按照以下步骤进行：
+
+1. **更新软件包列表**：
+    ```sh
+    sudo apt update
+    ```
+
+2. **升级`curl`软件包**：
+    ```sh
+    sudo apt install --only-upgrade curl
+    ```
+
+3. **验证升级**：
+    ```sh
+    curl --version
+    ```
+
+### 完整脚本
+
+以下是更新软件包列表并升级`curl`软件包的完整脚本：
+
+```sh
+#!/bin/bash
+
+# 更新软件包列表
+sudo apt update
+
+# 升级指定软件包（此例中为curl）
+sudo apt install --only-upgrade curl
+
+# 验证升级
+curl --version
+```
+
+将此脚本保存为一个文件，例如`upgrade_package.sh`，使其可执行，然后运行它：
+
+```sh
+chmod +x upgrade_package.sh
+./upgrade_package.sh
+```
+
+此脚本将升级你在Ubuntu系统上指定的软件包。
+
+### 后续步骤
+
+**a.** 识别任何其他需要升级的软件包，并使用相同的方法。
+
+**b.** 设置一个cron作业，定期检查并应用关键软件包的升级。
+
 ## linux 检查网络的命令 详解
 
 在 Linux 中，有多种命令可以用于检查网络连接、配置和状态。以下是一些常用的命令及其用法：
