--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2449,3 +2449,9 @@ mount /dev/mmcblk0p10
     + 放置算法接口,任务状态增加放置点参数 [done]
   + 技能储备
     + 个人博客首页显示指定文章
+
++ 05.30
+  + vcr-机场行李箱抓取项目 
+    + 手眼标定流程测试
+  + 技能储备
+    + 个人博客首页显示指定文章
