--- a/BOOST/asio/2024-05-22-C++网络编程asio使用总结.md
+++ b/BOOST/asio/2024-05-22-C++网络编程asio使用总结.md
@@ -1003,10 +1003,7 @@ int main()
     auto header = build_header(test_message);
 
     // Gather header and body into a single buffer.
-    std::array<asio::const_buffer, 2> buffers = {{
-      asio::buffer(header),
-      asio::buffer(test_message)
-    }};
+    std::array<asio::const_buffer, 2> buffers;
 
     // Write header and body to socket.
     std::cout << socket1.is_open() << std::endl;
