--- a/Docker/2024-05-22-docker_2_基础语法.md
+++ b/Docker/2024-05-22-docker_2_基础语法.md
@@ -43,7 +43,7 @@ docker inspect [OPTIONS] OBJECT [OBJECT...]
    默认情况下，`docker inspect` 输出 JSON 格式的信息，但你可以使用 `--format` 选项来指定自定义输出格式。例如：
 
    ```bash
-   docker inspect --format '{{.State.Status}}' container_name_or_id
+   docker inspect --format container_name_or_id
    ```
 
    这将仅输出容器的状态（运行、停止等）。
