--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2452,6 +2452,6 @@ mount /dev/mmcblk0p10
 
 + 05.30
   + vcr-机场行李箱抓取项目 
-    + 手眼标定流程测试
+    + 手眼标定流程测试 [done]
   + 技能储备
-    + 个人博客首页显示指定文章
+    + 个人博客首页显示指定文章 [done]
