rename C++ category to Cpp

--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2456,3 +2456,10 @@ mount /dev/mmcblk0p10
     + 手眼标定流程测试 [done]
   + 技能储备
     + 个人博客首页显示指定文章 [done]
+
++ 05.31
+  + vcr-机场行李箱抓取项目 
+    + 手眼标定流程测试 [doing]
+    + 任务执行流程测试 [doing]
+  + 技能储备
+    + resume edit
