--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2459,7 +2459,22 @@ mount /dev/mmcblk0p10
 
 + 05.31
   + vcr-机场行李箱抓取项目 
-    + 手眼标定流程测试 [doing]
-    + 任务执行流程测试 [doing]
+    + 手眼标定流程测试 [done]
+    + 任务执行流程测试 [done]
+  + 技能储备
+    + resume edit
+
+## 2024.06.03 - 2024.06.09
+
++ 06.03
+  + 请假
+
++ 06.04
+  + vcr-机场行李箱抓取项目 
+    + 行李抓取： 提升抓取精度
+    + 行李码垛：行李不少于十件，高度不少于三层
+  + rk
+    + 对接新中光平台
+    + 对接音响
   + 技能储备
     + resume edit
