--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2474,7 +2474,7 @@ mount /dev/mmcblk0p10
     + 行李抓取： 提升抓取精度
     + 行李码垛：行李不少于十件，高度不少于三层
   + rk
-    + 对接新中光平台
-    + 对接音响
+    + 对接新中光平台 [done]
+    + 对接音响 [doing]
   + 技能储备
     + resume edit
