--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
@@ -222,12 +222,12 @@ curl --location --request POST 'http://127.0.0.1:8000/api/device/addCloudPlatfor
 --header 'Host: 192.169.5.78:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name": "常州建安测试",
+    "name": "杭州新中大测试",
     "type": "event_push",
-    "protocol":"changzhou_jianan",
-    "address": "https://wisdomsite.ticdata.cn/zhgd-cus/openApi/token&https://wisdomsite.ticdata.cn/smart-mon/openApi/addAiData",
-    "appKeyId": "qian001",
-    "appKeySecret": "12345678"
+    "protocol":"hangzhou_xinzhongda",
+    "address": "https://d6cnext.haolink.cn/dcs/api/hardware/ai/alarm",
+    "appKeyId": "aaa",
+    "appKeySecret": "123"
 }'
 
 # 查看序列号
