fix analyze error

--- a/GitHub/2024-05-22-Jekyll.md
+++ b/GitHub/2024-05-22-Jekyll.md
@@ -302,32 +302,8 @@ navbar-links:
 
 + 创建categories.html文件
 + 在根目录下创建一个categories.html文件，并将下面代码复制到这个文件中
-```html
----
-layout: page
-permalink: /categories/
-title: 博客分类
----
 
-<!--添加搜索框-->
-<div id="archives">
-{%for category in site.categories %}
-  <div class="archive-group">
-    {%capture category_name %}{{ category | first }}{%endcapture %}
-    <div id="#{{ category_name | slugize }}"></div>
-    <p></p>
-
-    <h3 class="category-head">{{ category_name }} ({{site.categories[category_name].size()}})</h3>
-    <a name="{{ category_name | slugize }}"></a>
-    {%for post in site.categories[category_name] %}
-    <article class="archive-item">
-      <h4><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h4>
-    </article>
-    {%endfor %}
-  </div>
-{%endfor %}
-</div>
-```
+![示例代码](/assets/img/github_jekyll_categories_code.png)
 
 + 对每个文章进行分类的添加
   + 修改_pose目录下的.md文件，然后在开头添加categories: 标签，好让分类页面去一起展示，添加的示例如下:
