--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -1958,18 +1958,9 @@ tag: Personal
     + 发现了问题
       + 使用自动重启脚本后，在docker停止容器后，发现了structure needs clean问题
       + 修复的步骤
-```bash
-fuser -m /userdata
-# output: 669 670 678 683 909
 
-kill -s 9 669 670 678 683 909
+![示例代码](/assets/img/work_note_fuser_code.png)
 
-umount /dev/mmcblk0p10
-
-fsck.ext4 /dev/mmcblk0p10
-
-mount /dev/mmcblk0p10 
-```
     + 制作带有云平台的docker镜像 [ing]
   + leave-job
     + 项目编码mp4失败问题
