--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2469,3 +2469,13 @@ tag: Personal
     + 对接音响 [doing]
   + 技能储备
     + resume edit
+
++ 06.05
+  + vcr-机场行李箱抓取项目 
+    + 行李抓取： 提升抓取精度
+    + 行李码垛：行李不少于十件，高度不少于三层
+  + rk
+    + 对接音响 [doing]
+      + 有了思路，待对接剩余接口
+  + 技能储备
+    + resume edit
