--- a/Linux/shell_2_常用技巧/2024-05-22-shell_2_2_常用技巧.md
+++ b/Linux/shell_2_常用技巧/2024-05-22-shell_2_2_常用技巧.md
@@ -9,6 +9,224 @@ tag: Linux.shell
 
 + shell编程常用技巧
 
+## linux 目录下按照规则排序文件
+
+在 Linux 中，可以使用 `ls` 命令结合不同的选项来按照规则排序目录下的文件。以下是一些常用的示例和方法：
+
+### 1. 按文件名排序
+
+默认情况下，`ls` 命令按文件名的字母顺序排序：
+
+```sh
+ls
+```
+
+### 2. 按文件大小排序
+
+使用 `-S` 选项按文件大小排序：
+
+```sh
+ls -lS
+```
+
+### 3. 按修改时间排序
+
+使用 `-t` 选项按修改时间排序：
+
+```sh
+ls -lt
+```
+
+### 4. 按访问时间排序
+
+使用 `-u` 选项按访问时间排序：
+
+```sh
+ls -lu
+```
+
+### 5. 按文件创建时间排序（有些文件系统不支持）
+
+使用 `-c` 选项按文件创建时间排序：
+
+```sh
+ls -lc
+```
+
+### 6. 逆序排序
+
+使用 `-r` 选项逆序排列：
+
+```sh
+ls -lr
+```
+
+### 7. 按扩展名排序
+
+使用 `--sort=extension` 按扩展名排序：
+
+```sh
+ls -l --sort=extension
+```
+
+### 8. 按文件大小排序并显示人类可读格式
+
+使用 `-h` 选项结合 `-S` 选项：
+
+```sh
+ls -lSh
+```
+
+### 9. 按指定规则排序文件
+
+结合 `find` 和 `sort` 命令，可以按照更加复杂的规则进行排序。例如，按文件大小排序：
+
+```sh
+find . -type f -exec ls -l {} + | sort -k 5 -n
+```
+
+### 10. 按文件名排序，并忽略大小写
+
+使用 `-f` 选项结合 `sort` 命令：
+
+```sh
+ls | sort -f
+```
+
+### 示例
+
+假设有一个目录，里面包含以下文件：
+
+```sh
+file1.txt
+file2.txt
+fileA.txt
+fileB.txt
+file10.txt
+```
+
+**按文件名排序（忽略大小写）**
+
+```sh
+ls | sort -f
+```
+
+输出：
+
+```sh
+file1.txt
+file10.txt
+file2.txt
+fileA.txt
+fileB.txt
+```
+
+**按文件大小排序**
+
+```sh
+ls -lS
+```
+
+输出（假设文件大小分别为 100B, 200B, 150B, 50B, 250B）：
+
+```sh
+-rw-r--r-- 1 user group  250 Apr 10 10:00 file10.txt
+-rw-r--r-- 1 user group  200 Apr 10 10:00 file2.txt
+-rw-r--r-- 1 user group  150 Apr 10 10:00 fileA.txt
+-rw-r--r-- 1 user group  100 Apr 10 10:00 file1.txt
+-rw-r--r-- 1 user group   50 Apr 10 10:00 fileB.txt
+```
+
+### 总结
+
+通过结合使用 `ls` 命令的不同选项以及 `sort` 命令，你可以根据各种规则对目录下的文件进行排序。选择适合你需求的命令和选项，并根据需要进行调整。
+
+## shell 字符串分割
+
+在 Shell 中，可以使用多种方法来分割字符串。下面是几种常见的方法：
+
+### 1. 使用 `IFS`（内部字段分隔符）
+
+使用 `IFS` 变量可以轻松地将字符串分割成数组。以下是一个示例，将逗号分隔的字符串分割成数组：
+
+```sh
+#!/bin/bash
+
+str="apple,banana,cherry"
+IFS=',' read -r -a array <<< "$str"
+
+# 输出数组元素
+for element in "${array[@]}"
+do
+    echo "$element"
+done
+```
+
+### 2. 使用 `cut`
+
+`cut` 命令可以从字符串中提取字段。以下是一个示例，使用逗号作为分隔符：
+
+```sh
+#!/bin/bash
+
+str="apple,banana,cherry"
+echo "$str" | cut -d',' -f1  # apple
+echo "$str" | cut -d',' -f2  # banana
+echo "$str" | cut -d',' -f3  # cherry
+```
+
+### 3. 使用 `awk`
+
+`awk` 是一个强大的文本处理工具，可以用来分割字符串。以下是一个示例：
+
+```sh
+#!/bin/bash
+
+str="apple,banana,cherry"
+echo "$str" | awk -F',' '{print $1}'  # apple
+echo "$str" | awk -F',' '{print $2}'  # banana
+echo "$str" | awk -F',' '{print $3}'  # cherry
+```
+
+### 4. 使用 `tr` 和 `while` 循环
+
+`tr` 命令可以用来替换字符。结合 `while` 循环，可以逐个处理字符串中的每个部分。以下是一个示例：
+
+```sh
+#!/bin/bash
+
+str="apple,banana,cherry"
+echo "$str" | tr ',' '\n' | while read element
+do
+    echo "$element"
+done
+```
+
+### 5. 使用参数扩展
+
+在 Bash 中，还可以使用参数扩展进行简单的字符串分割：
+
+```sh
+#!/bin/bash
+
+str="apple,banana,cherry"
+
+# 截取第一个逗号前的部分
+part1="${str%%,*}"
+echo "$part1"  # apple
+
+# 截取第一个逗号后的部分
+remaining="${str#*,}"
+
+# 再次截取
+part2="${remaining%%,*}"
+echo "$part2"  # banana
+part3="${remaining#*,}"
+echo "$part3"  # cherry
+```
+
+这些方法可以帮助你在 Shell 脚本中进行字符串分割。选择最适合你需求的方法，并根据需要调整分隔符和字符串。
+
 ## 在shell script中以某用户身份执行命令
 
 ```bash
