--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2491,3 +2491,9 @@ tag: Personal
       + 有了思路，待对接剩余接口
   + 技能储备
     + resume edit
+
++ 06.07
+  + vcr-机场行李箱抓取项目 
+  + rk
+    + 对接音响 [doing]
+      + 有了思路，待对接剩余接口
