--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
@@ -131,12 +131,12 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name":"火焰",
+    "name":"反光衣检测-test",
     "start":1,
-    "source":11,
+    "source":24,
     "schedulerType":"Daemon",
     "models":{
-        "id":1,
+        "id":4,
         "duration":" ",
         "start":" ",
         "end":" "
@@ -144,13 +144,13 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 }'
 
 # 停止任务
-curl -X POST --data "{\"id\":\"Qk99V\"}" http://127.0.0.1:8000/api/setting/task/stop
+curl -X POST --data "{\"id\":\"Y2k91\"}" http://127.0.0.1:8000/api/setting/task/stop
 
 # 删除任务
-curl -X POST --data "{\"ids\":[\"U7tCN\"]}" http://127.0.0.1:8000/api/setting/task/delete
+curl -X POST --data "{\"ids\":[\"A3lLD\"]}" http://127.0.0.1:8000/api/setting/task/delete
 
 # 启动任务
-curl -X POST --data "{\"id\":\"Qk99V\"}" http://127.0.0.1:8000/api/setting/task/start
+curl -X POST --data "{\"id\":\"A3lLD\"}" http://127.0.0.1:8000/api/setting/task/start
 
 # 任务列表
 curl -X GET http://127.0.0.1:8000/api/setting/task/list
@@ -181,6 +181,17 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/add' \
 --data-raw '{
     "name": "闸机安全帽识别",
     "url":"rtsp://admin:qwer2024@192.168.110.64:554/h264/ch1/main/av_stream"
+}'
+
+# 相机测试
+curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/test' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 127.0.0.1:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "id": 25
 }'
 
 # 清除所有告警记录并删除文件
