--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2497,3 +2497,30 @@ tag: Personal
   + rk
     + 对接音响 [doing]
       + 有了思路，待对接剩余接口
+
+## 2024.06.10 - 2024.06.16
+
++ 06.10
+  + 放假
+
++ 06.11
+  + vcr-机场行李箱抓取项目 
+    + 任务属性接口增加长宽高和重量，增加装载率 [done]
+    + 创建任务接口增加虚拟数据参数，3D码垛算法任务 [doing]
+  + rk
+    + 解决检测区域问题 [defer]
+    + mnc增加隽声音柱平台 [done]
+
++ 06.12
+  + vcr-机场行李箱抓取项目 
+    + 创建任务接口增加虚拟数据参数，3D码垛算法任务 [doing]
+  + rk
+    + 解决检测区域问题 [defer]
+
++ 06.13
+  + vcr-机场行李箱抓取项目 
+    + 创建任务接口增加虚拟数据参数，3D码垛算法任务 [doing]
+  + rk
+    + 解决检测区域问题 [defer]
+    + gh-rk-2002 
+      + 反光衣数据采集和算法升级
