--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
@@ -144,13 +144,13 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 }'
 
 # 停止任务
-curl -X POST --data "{\"id\":\"Y2k91\"}" http://127.0.0.1:8000/api/setting/task/stop
+curl -X POST --data "{\"id\":\"rA5ox\"}" http://127.0.0.1:8000/api/setting/task/stop
 
 # 删除任务
 curl -X POST --data "{\"ids\":[\"A3lLD\"]}" http://127.0.0.1:8000/api/setting/task/delete
 
 # 启动任务
-curl -X POST --data "{\"id\":\"A3lLD\"}" http://127.0.0.1:8000/api/setting/task/start
+curl -X POST --data "{\"id\":\"rA5ox\"}" http://127.0.0.1:8000/api/setting/task/start
 
 # 任务列表
 curl -X GET http://127.0.0.1:8000/api/setting/task/list
@@ -191,7 +191,7 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/test' \
 --header 'Host: 127.0.0.1:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "id": 25
+    "id": 6
 }'
 
 # 清除所有告警记录并删除文件
