--- a/Personal/2024-05-22-求职简历.md
+++ b/Personal/2024-05-22-求职简历.md
@@ -55,3 +55,13 @@ tag: Personal
 + 打磨两个产品：
   + RK平台下的边缘计算产品 
   + 协作机器人的底层服务器
+
+## 边缘计算项目总结
+
++ 项目名称： 智慧工地视频分析盒子
++ 项目介绍： 智慧工地视频分析盒子采用Rockchip(瑞芯微)的1126芯片，是一款低功耗，低成本的边缘盒子产品。支持云连接，四种AI算法，主要应用于智慧工地场景。出货量40+
++ 技术栈：
+  + 第三方开源库： mongoose, sqlite3, opencv, ffmpeg, cpp-httplib, nlohmann/json
+  + 产品部署： docker, python scripts, shell scripts, frp
++ 工作和成就：
+  + 
