test for ubuntu

--- a/Personal/2024-05-22-求职简历.md
+++ b/Personal/2024-05-22-求职简历.md
@@ -66,3 +66,5 @@ tag: Personal
 + 工作和成就：
   + 负责后端服务器开发，视频流分析和实现检测业务，两个月的时间从零设计，开发，测试并发布。
   + 负责产品功能迭代，对接推送协议，告警音柱，售后支持等工作。对接的平台有南京傲途，常州启安，杭州新中大，苏州傲之途等，对接的音柱厂家有妙音，隽声。部署盒子40+
+
+## robot project
