--- a/Linux/linux_3_常用技巧/2024-05-22-linux_3_02_常用技巧.md
+++ b/Linux/linux_3_常用技巧/2024-05-22-linux_3_02_常用技巧.md
@@ -9,6 +9,22 @@ tag: Linux
 
 + linux系统下常用技巧
 
+## 禁用内核升级
+
++ 查看可用内核
+```bash
+dpkg --list | grep linux-image
+dpkg --list | grep linux-headers
+dpkg --list | grep linux-modules
+```
+
++ 锁定内核更新
+```bash
+sudo apt-mark hold linux-image-5.15.0-92generic
+sudo apt-mark hold linux-headers-5.15.0-92-generic
+sudo apt-mark hold linux-modules-extra-5.15.0-92-generic
+```
+
 ## apt search
 
 + apt search命令在包的名称和描述中查找提供的字符串
