--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
@@ -308,6 +308,9 @@ curl -X POST --data-urlencode 'cmd=4' --data-urlencode 'id=40gA9' http://127.0.0
 
 # 更新许可证
 curl -X POST --data-urlencode 'cmd=202' --data-urlencode 'licence=CKBEESUG-KAK6EWVJ-CKBFESUC-JKBEESUD-2BDEWZZA-N9KQESUC-JKABRSSD-JKMGESUC-JKBEESUC-JKBFE2UD-KFAGSF9C' http://127.0.0.1:17008/api
+
+# 获取授权码
+curl http://192.169.4.56:27008/api?cmd=1\&day=365\&mc=A5JJPWFGUWDNBBYXW4L2PXLH49V4R39VALMVRT3L63KDMKYAS4AJPBNG4CDPMBYFS4M9RT4ZYMPRH3LYRR4N9EWP
 ```
 
 ## vam 
