--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2512,7 +2512,7 @@ last_modified_date: 2024-06-13 12:00:00 +0800
     + 解决检测区域问题 [defer]
     + mnc增加隽声音柱平台 [done]
 
-+ 06.12e
++ 06.12
   + vcr-机场行李箱抓取项目 
     + 创建任务接口增加虚拟数据参数，3D码垛算法任务 [doing]
   + rk
@@ -2525,3 +2525,19 @@ last_modified_date: 2024-06-13 12:00:00 +0800
     + 解决检测区域问题 [defer]
     + gh-rk-2002 
       + 反光衣数据采集和算法升级
+
++ 06.14
+  + vcr-机场行李箱抓取项目
+    + 代码封版 [done]
+  + rk
+    + 解决检测区域问题 [done]
+    + gh-rk-2002 
+      + 反光衣数据采集和算法升级 [defer]
+
+## 2024.06.17 - 2024.06.23
+
++ 06.17
+  + rk
+    + 新镜像制作
+    + 部署文档
+    + 
