--- a/CMake/cmake_3_常用技巧/2024-05-22-cmake_3_02_常用技巧.md
+++ b/CMake/cmake_3_常用技巧/2024-05-22-cmake_3_02_常用技巧.md
@@ -9,6 +9,121 @@ tag: CMake
 
 + cmake 常用的技巧
 
+## CMakeLists.txt 编译性能参数配置
+
+在 `CMakeLists.txt` 中配置编译性能参数，可以通过一些特定的编译选项和设置来优化编译时间和资源使用。以下是一些常见的方法和配置选项，可以用来提升编译性能：
+
+### 1. 使用 `CMAKE_BUILD_TYPE`
+
+通过设置 `CMAKE_BUILD_TYPE` 可以启用特定的编译器优化选项。例如，在开发过程中可以设置为 `Debug`，在发布时设置为 `Release`。使用 `Release` 模式可以启用优化选项，从而减少生成的代码大小和提升执行性能。
+
+```cmake
+set(CMAKE_BUILD_TYPE Release)
+```
+
+### 2. 使用 `CMAKE_CXX_FLAGS` 和 `CMAKE_C_FLAGS`
+
+可以为编译器指定一些优化选项，比如 `-O2` 或者 `-O3`，这些选项可以启用更多的编译器优化，从而提升生成代码的性能。
+
+```cmake
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
+```
+
+### 3. 使用 `CMAKE_LINKER_FLAGS`
+
+对于链接阶段，可以设置 `CMAKE_EXE_LINKER_FLAGS` 和 `CMAKE_SHARED_LINKER_FLAGS` 来优化链接器的行为。
+
+```cmake
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--as-needed")
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--as-needed")
+```
+
+### 4. 启用并行链接
+
+某些编译器和链接器支持并行链接，可以显著减少链接时间。对于 GNU 链接器，可以使用 `-Wl,--parallel`。
+
+```cmake
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--parallel")
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--parallel")
+```
+
+### 5. 使用 `ccache`
+
+`ccache` 是一个编译缓存工具，可以显著减少重复编译的时间。要在 CMake 中启用 `ccache`：
+
+```cmake
+find_program(CCACHE_PROGRAM ccache)
+if(CCACHE_PROGRAM)
+    set(CMAKE_C_COMPILER_LAUNCHER ${CCACHE_PROGRAM})
+    set(CMAKE_CXX_COMPILER_LAUNCHER ${CCACHE_PROGRAM})
+endif()
+```
+
+### 6. 使用 `Ninja` 生成器
+
+`Ninja` 是一个快速的构建系统，通常比默认的 `Make` 更快。要使用 `Ninja`，可以在 CMake 配置阶段指定生成器：
+
+```sh
+cmake -G Ninja ..
+```
+
+在 `CMakeLists.txt` 中没有直接指定 `Ninja` 的方法，但可以通过命令行来指定。
+
+### 7. 预编译头文件
+
+预编译头文件可以显著减少编译时间，特别是当项目包含大量头文件时。可以通过 `target_precompile_headers` 指令来设置预编译头文件：
+
+```cmake
+target_precompile_headers(my_target PRIVATE precompiled.h)
+```
+
+### 8. 使用编译选项优化
+
+根据不同的编译器，可以启用一些特定的优化选项。例如，针对 GCC，可以启用以下选项：
+
+```cmake
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -flto")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=native -flto")
+endif()
+```
+
+### 完整示例
+
+以下是一个包含上述多个优化配置的 `CMakeLists.txt` 示例：
+
+```cmake
+cmake_minimum_required(VERSION 3.14)
+project(MyProject)
+
+# 设置编译类型
+set(CMAKE_BUILD_TYPE Release)
+
+# 编译器优化选项
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -march=native -flto")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -march=native -flto")
+
+# 链接器优化选项
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--as-needed -Wl,--parallel")
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--as-needed -Wl,--parallel")
+
+# 启用 ccache
+find_program(CCACHE_PROGRAM ccache)
+if(CCACHE_PROGRAM)
+    set(CMAKE_C_COMPILER_LAUNCHER ${CCACHE_PROGRAM})
+    set(CMAKE_CXX_COMPILER_LAUNCHER ${CCACHE_PROGRAM})
+endif()
+
+# 预编译头文件
+target_precompile_headers(MyTarget PRIVATE precompiled.h)
+
+# 项目源文件
+add_executable(MyTarget main.cpp)
+```
+
+通过在 `CMakeLists.txt` 中添加这些配置，可以显著提升编译性能并减少系统资源的使用。
+
 ## cmake 子项目设置二进制文件保存路径
 
 要设置子项目的二进制文件保存路径，你可以在使用 `add_subdirectory()` 函数添加子项目时，通过第二个参数 `binary_dir` 来指定。
