--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
@@ -250,6 +250,34 @@ curl -X GET http://127.0.0.1:8000/api/device/listSoundPlatform
 # 获取音频文件列表
 curl -X GET http://127.0.0.1:8000/api/setting/task/listSongs
 
+# 创建隽声音柱平台
+curl --location --request POST 'http://127.0.0.1:8000/api/device/addSoundPlatform' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 127.0.0.1:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "name": "隽声",
+    "product": "juansheng",
+    "sn":"18238398546;123456;5lsqf8mpsc",
+    "address": "http://124.71.157.23:9520"
+}'
+
+# 创建妙音音柱平台
+curl --location --request POST 'http://127.0.0.1:8000/api/device/addSoundPlatform' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 127.0.0.1:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "name": "妙音",
+    "product": "miaoyin",
+    "sn":"ls20://0201EE5E4D31",
+    "address": "http://192.168.3.60:8888"
+}'
+
 # 获取系统配置(图片数量)
 curl --location --request GET 'http://127.0.0.1:8000/api/device/system_config' \
 --header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
@@ -282,8 +310,6 @@ curl --location --request PUT 'http://127.0.0.1:8000/api/device/system_config' \
 ```bash
 # 获取列表
 curl -X POST http://192.168.0.101:8888 --header 'Content-Type: application/json' --data-raw '{"sn": "ls20://0201EE5E4D31","type": "req","name": "songs_queue_list"}'
-
-
 ```
 
 ## vca script
