--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2539,5 +2539,9 @@ last_modified_date: 2024-06-13 12:00:00 +0800
 + 06.17
   + rk
     + 新镜像制作
-    + 部署文档
-    + 
+    + 部署文档 [doing]
+
++ 06.18
+  + rk
+    + 新镜像制作 [done]
+    + 部署文档 [done]
